# etl-py-poc

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.agents/skills/teach/: SKILL.md
data/: country_aliases.json
docs/adr/: 000-gcp-migration-overview.md  001-gcp-migration-strategy.md  002-bigquery-data-model.md  003-keep-polars-transforms.md  004-defer-app-split.md
learning/: MISSION.md  NOTES.md  RESOURCES.md
learning/assets/: lesson-style.css
learning/learning-records/: 0001-fresh-to-data-engineering.md  0002-lesson-flow-established.md  0003-platform-capabilities-focus.md
learning/lessons/: 0001-what-is-bigquery.html  0002-google-sql-basics.html  0003-bigquery-core-capabilities.html  0004-python-client-bigquery.html  0005-query-optimization-performance.html
learning/reference/: bigquery-glossary.html
openspec/changes/auto-open-browser/: proposal.md  tasks.md
openspec/changes/implement-gcp-bigquery/: design.md  proposal.md  tasks.md
openspec/changes/poc-etl-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/split-cli-cache/: proposal.md
openspec/specs/etl-aggregate-load/: spec.md
openspec/specs/etl-cli/: spec.md
src/: cli.py
src/extract/: cache.py  fetch_countries.py  fetch_universities.py
src/load/: __init__.py  bigquery.py  config.py  loader.py
src/models/: country.py  university.py
src/pipeline/: export_bq.py  run.py
src/transform/: aggregate.py  enrich.py  join_data.py  normalize.py
src/utils/: http.py  log.py
src/view/: report.py
tests/: test_bigquery_config.py  test_bigquery_loader.py  test_cache.py  test_export_bq.py  test_normalize.py  test_pipeline_run.py  test_view.py
(+28 files in other folders)
